--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "express": "^4.17.1",
     "glob": "^7.1.7",
     "ip": "^1.1.7",
-    "tslibv2": "1.6.1",
+    "tslib-react": "1.7.1",
     "tslib-util": "1.6.2",
     "mime-types": "^2.1.31",
     "music-metadata": "^7.8.5"
